@@ -1,6 +1,7 @@
 
 Version Next
 
+    - Added @Unique validation constraint and related classes
     - Added VaadinUtil.invokeLater() and VaadinApplication.invokeLater()
     - Added AbstractUnsizedContainer and AbstractQueryList.handleSizeChange()
     - Added IndentXMLEventWriter and StackXMLEventReader
